cluster-talos/kubernetes/apps/netbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    # included in Kasten policy (k10.kasten.io/backup=true selector)
    k10.kasten.io/backup: "true"
