cluster-talos/kubernetes/apps/netbox/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-redis
  namespace: netbox
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: netbox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: netbox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/instance: netbox
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: intel.feature.node.kubernetes.io/gpu
                    operator: DoesNotExist
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: redis
          image: docker.io/redis:7-alpine
          imagePullPolicy: IfNotPresent
          args:
            - redis-server
            - --appendonly
            - "yes"
            - --save
            - "60 1000"
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: netbox-redis
---
apiVersion: v1
kind: Service
metadata:
  name: netbox-redis
  namespace: netbox
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: netbox
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: netbox
